@startuml

skinparam class {
	ArrowColor SteelBlue
	BorderColor Dimgray
	HeaderBackgroundColor SteelBlue
	BackgroundColor White
	FontName Calibri bold
	AttributeFontColor #333
	AttributeFontName Calibri
	AttributeFontSize 13
	FontColor Ivory
	FontSize 15
}

hide empty members

class DataImportUI{
-DataImportHouseCTRL houseCtrl;
-Path filePath;
+importDataHouseFromFile()
+showReadingsOfHouse()

}

class DataImportCtrl{
-RoomList roomList
+importDataHouseFromFile()
+failedToAddDataHouse()
}

class DataImport{
-Path configFilePath;
-RoomList roomList;

+ importFileFromReadingsHouse()
+loadReadingFilesHouse()
+createLogFileHouse(String fileName)
+getFileExtensionHouse(Path filePathAndName)
+readFileHouse()
+getClassName(String dataType, String fileExtension)
}

interface FileReaderReadings {
- Path filePath;
+ importReadingsToHouse(Path filePath)
}

class JSONReading{
- Path filePath;
+ readHouseFile()
+ importReadingsToHouse(Path filePath)
}

class XMLReading{
-Path filePath;
+ importReadingHouse()
+importReadingsToHouse(Path filePath)
+ getTagValue()
}

class CSVReading{
- Path filePath;
+importReadingsToHouse(Path filePath)
}

class RoomList {
 - RoomList: List<Room>

 + getRoom()
  }

class Room {
-SensorList sensorList
+getSensorListRoom()
}


class SensorList {
 - sensorList : List<Sensor>

 + getSensorListRoom()
}

class Sensor {
- ReadingList readingList
+ getReadingListRoom()
}

class ReadingList{
 - readingList : List<Reading>

 + getReadingListRoom()
 + newReading()
 + addReading(reading)

}

class Repositories{
 - readingList : List<Reading>

+ saveReading()

}

ReadingList "1"--"1" Repositories

Sensor "1"--"..*" ReadingList

SensorList "1"-"..*" Sensor

Room "1" - "..*"SensorList

RoomList "1"-- "..*"Room

RoomList  "1"-o "..*" DataImport


DataImportUI --> DataImportCtrl
DataImportCtrl --> DataImport


DataImport .|> FileReaderReadings
FileReaderReadings <|.. CSVReading
FileReaderReadings <|.. JSONReading
FileReaderReadings <|.. XMLReading

@enduml